# manasink-ml

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
scripts/: quick_sync.py
src/: __init__.py
src/api/: __init__.py  app.py  cache.py  models.py  services.py
src/data/: __init__.py  categories.py  cli.py  database.py  db_config.py  db_models.py  deck_loader.py  edhrec.py  edhrec_ingest.py  features.py  ingest.py  scryfall.py
src/game/: __init__.py  actions.py  card.py  simulator.py  state.py  synergy_policy.py
src/models/: __init__.py  policy_network.py  state_encoder.py  training.py
tests/: test_api.py  test_deck_loader.py  test_features.py  test_game.py  test_integration.py  test_synergy_policy.py  test_training.py
