[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manasink-ml"
version = "0.1.0"
description = "ML-powered Magic: The Gathering card recommendation engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tobias"}
]
keywords = ["mtg", "magic", "machine-learning", "reinforcement-learning", "commander"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "ipykernel>=6.23.0",
]

[project.scripts]
manasink = "manasink_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true